k8s/authservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authservice-ingress
  namespace: default          # <- чтобы точно в default, если нужно
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: authservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 8080
